css/main.css
@font-face{
    font-family: "NexaBold";
    src: url('../fonts/Nexa-Bold.ttf')
}

@font-face{
    font-family: "NexaLight";
    src: url('../fonts/Nexa-Light.ttf')
}

::-webkit-scrollbar {
  width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #f1f1f1;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

html,body{
    background-color:#13141A;
    width:100vw;
    height: 100vh;
    margin:0px;
    overflow: hidden;
}

*{
    box-sizing: border-box;
    font-family: 'NexaBold';
    color:white;
    transition: all 1s;
}

h1{
  animation: show 2s cubic-bezier(1,-0.17,.68,.84);
  font-size: calc(100px + (160 - 14) * ((100vw - 300px) / (1920 - 300)));
}

h2{
  font-size: calc(30px + (50 - 30) * ((100vw - 300px) / (1920 - 300)));
}

h2,h3,h4{
  animation: show2 1.2s cubic-bezier(1,-0.17,.68,.84);
}

p{
  font-family: NexaLight
}

/*#########################
          KEYFRAMES
 #########################*/

 @keyframes line2 {
   0% {
     width: 0;
   }
   100% {
     width: 100px;
   }
 }

 @keyframes leftSide {
     0%   {
       width: 0;
     }
     100% {
       width: 50%;
     }
 }

 @keyframes leftSide2 {
     0%   {
       width: 0;
     }
     100% {
       width: 100%;
     }
 }

 @keyframes arrow {
     0%   {
       bottom: 0;
     }
     50%{
       bottom:10px
     }
     100% {
       bottom: 0;
     }
 }

 @keyframes show{
 	0% {
 	  opacity: 0;
 	  transform: translateY(-30px);
 }
 	100% {
 	  opacity: 1;
 	  transform: translateY(0);
  }
}

@keyframes show2{
 0% {
   opacity: 0;
   transform: translateX(-10px);
}
 100% {
   opacity: 1;
   transform: translateX(0);
 }
}

@keyframes topMenu{
 0% {
   height: 0;
}
 100% {
   height: 100%;
 }
}

@keyframes line{
 0% {
   height: 0;
}
 100% {
   height: 25px;
 }
}

@keyframes preloader {
  0% {
    left: 0;
  }
  100% {
    left: -100vw;
    display: none;
  }
}

/*#########################
          PRELOADER
 #########################*/

 .preloader{
   display: none;
   justify-content: center;
   align-items: center;
   width:100%;
   height: 100%;
   position: absolute;
   z-index: 550;
   background-color:#171921;

 }

 .preloader__text{
  width: 24em;
  margin: 0 auto;
  border-right: 2px solid rgba(255,255,255,.75);
  font-size: 180%;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  transform: translateY(-50%);
     animation: typewriter 1s steps(6) .5s 1 normal both,
                blinkTextCursor 500ms steps(20) infinite normal;
 }
 @keyframes typewriter{
   from{width: 0;}
   to{width: 3.7em;}
 }
 @keyframes blinkTextCursor{
   from{border-right-color: rgba(255,255,255,.75);}
   to{border-right-color: transparent;}
 }
/*#########################
          HEADER
 #########################*/

header{
    padding:10px 25px;
    display: flex;
    justify-content: space-between;
    width:100%;
    align-items: center;
    position: fixed ;
    top:0px;
    z-index: 500;
}

header.active{
  background-color:#171921;
}

header h3{
    text-align: center;
    letter-spacing: 15px;
    font-family: Raleway;
}

header .hamburger h3{
    letter-spacing: 2px;
}

.menu-toggle{
	flex:0 0 auto;
	width:40px;
	height:40px;
	border:1px solid white;
	cursor:pointer;
	position:relative;
  z-index: 20;
}
.hamburger,.cross{
	position:absolute;
	top:50%;
	left:50%;
	transform:translate(-50%,-50%);
}
.hamburger span{
	display:block;
	width:18px;
	height:2px;
	margin-bottom:3px;
	overflow:hidden;
	position:relative;
}
.hamburger span:last-child{
	margin:0;
}
.hamburger span:before,.hamburger span:after{
	content:"";
	position:absolute;
	width:100%;
	height:100%;
	background-color:white;
	transform:translateX(-200%);
	transition:transform ease 300ms;
}
.hamburger span:after{
	transform:translateX(0);
}
.hamburger span:nth-child(2):before,.hamburger span:nth-child(2):after{
	transition-delay:75ms;
}
.hamburger span:last-child:before,.hamburger span:last-child:after{
	transition-delay:150ms;
}
.menu-toggle:hover .hamburger span:before{
	transform:translateX(0);
}
.menu-toggle:hover .hamburger span:after{
	transform:translateX(200%);
}
.menu-toggle.active .hamburger span:before{
	transform:translateX(100%);
}
.menu-toggle.active .hamburger span:after{
	transform:translateX(200%);
}
.cross span{
	display:block;
	width:18px;
	height:2px;
	background-color:white;
	transform:translateY(50%) rotate(45deg) scaleX(0);
	transition:transform ease 200ms;
}
.cross span:last-child{
	transform:translateY(-50%) rotate(-45deg) scaleX(0);
}
.menu-toggle.active .cross span{
	transition-delay:450ms;
  top:1px;
	transform:translateY(50%) rotate(45deg) scaleX(1);
}
.menu-toggle.active .cross span:last-child{
  left:-1px;
  top:-2px;
	transform:translateY(-50%) rotate(-45deg) scaleX(1);
}

/*#########################
          TOP MENU
 #########################*/

 .top-menu{
   display: flex;
   align-items: center;
   justify-content: center;
   width:100%;
   height: 100%;
   background-color:#171921;
   display: none;
   z-index: 100;
   position: fixed;
   transition: all 2s;
   white-space: nowrap;
 }

 ul{
   list-style-type: none;
   font-size: 30px;
   text-transform: uppercase;
   text-align: center;
 }
li{
     padding:10px 20px;
     cursor:pointer;
     transition: all 1s;
     margin:10px 0;
     display: flex;
     align-items: center;
}
li:hover{
  color:#FF8C38 !important;
}

li p{
  visibility: hidden;
  opacity: 0;
  font-size:12px;
  margin-left:45px;
  transition: all 1s;
}

li.active{
  color:#FF8C38;
}

li.active:hover{
  color:white!important;
}

li span{
  visibility: hidden;
  opacity: 0;
  border-left: 2px solid #FF8C38;
  height: 25px;
  position: absolute;
  right:50%;
}

#menu-home:hover .home-p{
  visibility: visible;
  opacity: 1;
  animation: show2 .5s;
}

#menu-home:hover .menu-line{
  visibility: visible;
  opacity: 1;
  animation: line .5s;
}

#menu-about:hover .about-p{
  visibility: visible;
  opacity: 1;
  animation: show2 .5s;
}

#menu-about:hover .menu-line{
  visibility: visible;
  opacity: 1;
  animation: line .5s;
}

#menu-portfolio:hover .portfolio-p{
  visibility: visible;
  opacity: 1;
  animation: show2 .5s;
}

#menu-portfolio:hover .menu-line{
  visibility: visible;
  opacity: 1;
  animation: line .5s;
}

#menu-contact:hover .contact-p{
  visibility: visible;
  opacity: 1;
  animation: show2 .5s;
}

#menu-contact:hover .menu-line{
  visibility: visible;
  opacity: 1;
  animation: line .5s;
}


/*#########################
          HOME
 #########################*/

.home{
    width:100%;
    height: 100%;
    display: none;
    top:0;
}

.home-center{
    display: flex;
    align-items: center;
    justify-content: center;
    width:100%;
    position: absolute;
    top: 50%;
    left: 50%;
    transition: 1s all;
    transform: translate(-50%, -50%);
}

.home-left{
    display: flex;
    justify-content: center;
    align-items: center;
    width:50%;
    height: 100%;
    padding:20px;
    transition: all 1s;
    background-color: #FF8C38;
    animation: leftSide 1s;
}
.home-right{
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: flex-End

}

.scroll{
  margin-left: 20px;
  animation:arrow 1.3s infinite;
  position: absolute;
}

.scroll h5{
  margin-left:10px
}

/*#########################
          ABOUT
 #########################*/

 .about{
   display: none;
   justify-content: center;
   width:100%;
   height: 100%;
   top:0;
   flex-direction: row;
   position: absolute;
   padding:80px;
   text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.19);
 }

 .about h2, .about h3, .about p, .about__line{
   animation: show 1s;
   z-index: 10;
 }


 .about h3{
   font-family: NexaLight
 }

  .about__line{
    height: 2px;
    background: white;
    margin-top:-20px;
    left: 0;
    width:50px;
    animation: line2 1.2s forwards cubic-bezier(1,-0.17,.68,.84);
  }

  .about__name{
    flex-direction: column;
  }

  .about__name,  .about__skills{
    width:50%;
    display: flex;
    justify-content: center;
  }

 /*#########################
           PORTFOLIO
  #########################*/

.portfolio{
  width:100%;
  position: absolute;
  height: 100%;
}

/*#########################
          FOOTER
 #########################*/

footer{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  position: fixed;
  right: 30px;
  bottom:-30px;
  transition: 1s all;
  transform: translate(-50%, -50%);
  z-index: 510;
}

footer svg{
  width:15px;
  height: 15px;
  fill:white;
  cursor: pointer;
  margin-bottom:30px;
  transition: all 1s;
  display: block;
  z-index: 10;
}

.twitter__circle,.github__circle{
  opacity: 0;
  position: absolute;
  border-radius: 50px;
  background-color:white;
  width:35px;
  height: 35px;
  z-index: 5;
  bottom:11px;
  transition: .5s all;
}

footer a{
  display: flex;
  justify-content: center;
  align-items: center;
}

.github__circle{
  bottom:54px;
}

.footer__twitter{
  margin-bottom:-10px;
}

.footer__twitter:hover svg path, .footer__github:hover svg path{
  fill:#FF8C38;
}

.footer__github:hover .github__circle {
    opacity: 1;
    fill:black;
}

.footer__twitter:hover .twitter__circle {
    opacity: 1;
    fill:black;
}

 /*#########################
        Media Queries
  #########################*/

@media only screen and (max-width: 600px) {
  header h3 {
    letter-spacing: 10px;
  }
  #menu-home .menu-line{
    right:53%!important;
  }
  #menu-portfolio .menu-line{
    right:39%!important;
  }
  #menu-contact .menu-line{
    right:44%!important;
  }
}


@media only screen and (max-width: 400px){
  header{
    padding:10px;
  }
  header h3 {
    letter-spacing: 5px;
    font-size:15px;
  }
  #menu-home .menu-line{
    right:54%!important;
  }
  #menu-portfolio .menu-line{
    right:33%!important;
  }
  #menu-contact .menu-line{
    right:42%!important;
  }
}


@media only screen and (max-width: 800px)  {

  .about{
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  .about__name{
    align-items: center;
    text-align: center;
    white-space: nowrap;
  }
}

@media only screen and (max-width: 800px) and (min-width: 400px) {

  .about{
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  .about__name{
    align-items: center;
    text-align: center;
    white-space: nowrap;
  }

  #menu-home .menu-line{
    right:53%!important;
  }
  #menu-portfolio .menu-line{
    right:40%!important;
  }
  #menu-contact .menu-line{
    right:45%!important;
  }
}

@media only screen and (max-width: 1000px)  and (min-width: 800px) {

  #menu-home .menu-line{
    right:51%!important;
  }
  #menu-portfolio .menu-line{
    right:43%!important;
  }
  #menu-contact .menu-line{
    right:46%!important;
  }
}

@media only screen and (max-width: 1200px)  and (min-width: 1000px) {
  #menu-portfolio .menu-line{
    right:44%!important;
  }
}

